# bvr_detect

./: Cargo.toml  LICENSE  README.md
src/: bvr_data.rs  common.rs  data.rs  detection_processing.rs  detection_runners.rs  detectors.rs  extern_c_api.rs  lib.rs  send_channels.rs  utils.rs
src/common/: bvr_box.rs  bvr_detection.rs  bvr_image.rs  bvr_ort_yolo.rs  inference_device.rs  inference_processor.rs  model_config.rs  model_version.rs
src/data/: bvr_box.rs  bvr_detection.rs  bvr_image.rs  config_ort.rs  config_tch.rs  device_type.rs  filesystem_access.rs  label_threshold.rs  model_config.rs  processing_type.rs  send_channels.rs  time_calc.rs  yolo_types.rs
src/detection_runners/: inference_process.rs  ort_detector.rs  torch_detector.rs
src/detection_runners/ort_detector/: dyn_conf.rs  image_ops.rs  input_wrapper.rs  min_opt_max.rs  nms.rs  onnx.rs  ort_engine.rs  ort_inference.rs  prob.rs  xs.rs  y.rs
tests/: colours.rs  test_detection.rs  test_no_detection.rs
