[package]
name = "bvr_detect"
version = "0.3.1"
edition = "2021"

[lib]
name = "bvr_detect"
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
image = "0.25"
fast_image_resize = { version = "5.1", features = ["image"] }
#tracing-subscriber = "0.3"
parking_lot = "0.12"
crossbeam-channel = "0.5"
half = { version = "2.4" }
rand = { version = "0.9" }

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "macros", "fs", "sync"] }
anyhow = "1.0"
log = "0.4"
#tracing = "0.1"
rayon = "1.10"
prost = "0.13"
regex = "1.11"
dirs = "6.0"
#pyo3 = { version = "0.22", features = [ "auto-initialize"] }

[dependencies.ort]
version = "2.0.0-rc.9"
default-features = false
features = ["load-dynamic", "cuda", "tensorrt", "ndarray", "half"]

[dev-dependencies]
imageproc = "0.25"
ab_glyph = "0.2"

